# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "redis-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
anyhow = "1.0.59"                                          # error handling
clap = { version = "4", features = ["derive"] }            # creating a cli
bytes = "1.3.0"                                            # helps manage buffers
thiserror = "2"                                            # error handling
tokio = { version = "1.41.1", features = ["full"] }        # async networking
tokio-util = { version = "0.7.12", features = ["full"] }
futures-util = { version = "0.3.30", features = ["sink"] }
tracing = "0.1"
tracing-subscriber = "0.3"
hex-literal = "0.4.1"
chrono = "0.4.38"
